--- a/index.html
+++ b/index.html
@@ -1,100 +1,131 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KARBA Financial Consultant</title>
-  <link rel="stylesheet" href="styles.css" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>KARBA Financial Consultant</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
+
+    <!-- Config first (gives us BACKEND + SITE KEY) -->
+    <!-- before -->
+    <!-- <script defer src="config.js"></script> -->
+    <!-- after -->
+    <script defer src="config.v2.js?v=20250912a"></script>
+    <script defer src="script.js?v=20250912a"></script>
+
+
+<!-- Your main app logic -->
+<script defer src="config.v2.js?v=20250912a"></script>
+    <script defer src="script.js?v=20250912a"></script>
 </head>
 <body>
-  <!-- Header -->
-  <header class="header">
-    <div class="container">
-      <div class="brand">
-        <h1>KARBA</h1>
-        <p>Financial Consultant</p>
-      </div>
-      <nav>
-        <a href="#services">Services</a>
-        <a href="#about">About</a>
-        <a href="#consultation">Book Free Consultation</a>
-      </nav>
-    </div>
-  </header>
-
-  <!-- Hero -->
-  <section class="hero">
-    <div class="container">
-      <h2>Live Confidently. Invest Wisely. Leave a Legacy.</h2>
-      <p>Trusted protection and investment solutions for families, professionals, and growing businesses.</p>
-      <a href="#consultation" class="btn-primary">Get Covered Today</a>
-      <a href="https://wa.me/2349162631205?text=Hello%20KARBA%2C%20I%27d%20like%20a%20free%20consultation" target="_blank" class="btn-secondary">Chat on WhatsApp</a>
-    </div>
-  </section>
-
-  <!-- Services -->
-  <section id="services" class="services">
-    <div class="container">
-      <h3>Our Services</h3>
-      <div class="service-grid">
-        <div class="service-card">Life Insurance Policies</div>
-        <div class="service-card">Children Education Plans</div>
-        <div class="service-card">Retirement & Annuity</div>
-        <div class="service-card">Family Protection Plans</div>
-        <div class="service-card">Motor / Car Insurance</div>
-        <div class="service-card">General Insurance</div>
+<header class="nav">
+  <div class="container nav-inner">
+    <div class="brand">
+      <div class="shield">▲</div>
+      <div class="brand-text">
+        <div class="brand-title">KARBA</div>
+        <div class="brand-sub">FINANCIAL CONSULTANT</div>
       </div>
     </div>
-  </section>
+    <nav class="menu">
+      <a href="#services">Services</a>
+      <a href="#about">About</a>
+      <a href="#contact" class="btn btn-outline">Book Free Consultation</a>
+    </nav>
+  </div>
+</header>
 
-  <!-- About -->
-  <section id="about" class="about">
-    <div class="container">
-      <h3>About Us</h3>
-      <p>KARBA Financial Consultant serves as a trusted intermediary between insurance companies (and in the near future, real estate) and clients. We help you secure your future and protect your legacy.</p>
+<section class="hero">
+  <div class="container hero-inner">
+    <div class="hero-copy">
+      <h1>Live Confidently. Invest Wisely. <span class="nowrap">Leave a Legacy.</span></h1>
+      <p>Tailored protection and investment solutions for families, professionals, and growing businesses.</p>
+      <div class="cta-row">
+        <a href="#contact" class="btn btn-primary">Get Covered Today</a>
+        <a class="btn btn-ghost" href="https://wa.me/2348123456789?text=Hello%20KARBA%2C%20I%27d%20like%20a%20free%20consultation.">Chat on WhatsApp</a>
+      </div>
     </div>
-  </section>
+    <div class="hero-art" aria-hidden="true">
+      <div class="family-card">Black happy family — protected & thriving.</div>
+    </div>
+  </div>
+</section>
 
-  <!-- Consultation Form -->
-  <section id="consultation" class="consultation">
-    <div class="container">
-      <h3>Book a Free Consultation</h3>
-      <form id="consultation-form">
-        <input type="text" name="fullName" placeholder="Full name" required />
-        <input type="email" name="email" placeholder="Email" required />
-        <input type="tel" name="phone" placeholder="Phone (optional)" />
-        <select name="service" required>
-          <option value="">Select service of interest</option>
-          <option value="Life Insurance">Life Insurance</option>
-          <option value="Education Plan">Children Education Plan</option>
-          <option value="Annuity">Retirement & Annuity</option>
-          <option value="Family Protection">Family Protection</option>
-          <option value="Motor">Motor Insurance</option>
-          <option value="General">General Insurance</option>
+<section id="services" class="services">
+  <div class="container">
+    <h2>Our Services</h2>
+    <div class="grid">
+      <div class="card"><h3>Life Insurance Policies</h3><p>Affordable, flexible coverage designed to secure your loved ones and estate.</p></div>
+      <div class="card"><h3>Children Education Plans</h3><p>Plan ahead for tuition and long-term academic milestones.</p></div>
+      <div class="card"><h3>Family Protection Plans</h3><p>Comprehensive cover for income, health gaps, and emergencies.</p></div>
+      <div class="card"><h3>Retirement & Annuity</h3><p>Build stable retirement income streams and protect your future.</p></div>
+      <div class="card"><h3>Motor / Car Insurance</h3><p>Third-party and comprehensive cover with fast claims assistance.</p></div>
+      <div class="card"><h3>General Insurance</h3><p>Fire, burglary, travel and more — we’ll tailor cover to your needs.</p></div>
+      <div class="card"><h3>Real Estate Advisory (Future)</h3><p>Guidance on property acquisition and risk evaluation.</p></div>
+    </div>
+  </div>
+</section>
+
+<section id="about" class="about">
+  <div class="container about-inner">
+    <div>
+      <h2>Why KARBA?</h2>
+      <ul class="ticks">
+        <li>Independent advice focused on your goals</li>
+        <li>Transparent, modern process & ongoing support</li>
+        <li>Solutions that scale as your family or business grows</li>
+      </ul>
+    </div>
+    <div class="stat-card">
+      <div class="stat"><span>10+</span> partner providers</div>
+      <div class="stat"><span>100%</span> tailored recommendations</div>
+    </div>
+  </div>
+</section>
+
+<section id="contact" class="contact">
+  <div class="container">
+    <h2>Book a Free Consultation</h2>
+    <form id="lead-form" class="lead-form" autocomplete="on">
+      <div class="two">
+        <label>Full name<input name="fullName" required placeholder="Your full name"></label>
+        <label>Email<input name="email" required type="email" placeholder="you@example.com"></label>
+      </div>
+      <label>Phone (optional)<input name="phone" placeholder="+234 ..."></label>
+      <label>Service of interest
+        <select name="service">
+          <option>Life Insurance</option>
+          <option>Children Education Plan</option>
+          <option>Family Protection</option>
+          <option>Retirement & Annuity</option>
+          <option>Motor / Car Insurance</option>
+          <option>General Insurance</option>
         </select>
-        <textarea name="message" rows="3" placeholder="Message (optional)"></textarea>
-        <button type="submit" class="btn-primary">Submit</button>
-        <div id="form-status" aria-live="polite"></div>
-      </form>
-    </div>
-  </section>
+      </label>
+      <label>Message (optional)<textarea name="message" rows="4" placeholder="Tell us your goal..."></textarea></label>
+      <button class="btn btn-primary" type="submit">Submit</button>
+      <div id="form-status" aria-live="polite"></div>
+    </form>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <p class="brand-title">KARBA FINANCIAL CONSULTANT</p>
-      <div class="socials">
-        <a href="https://www.linkedin.com/in/babatundebamigbetan" target="_blank">LinkedIn</a>
-        <a href="https://www.facebook.com/share/..." target="_blank">Facebook</a>
-        <a href="https://www.instagram.com/karba_financialconsultant" target="_blank">Instagram</a>
-        <a href="https://www.youtube.com/@karbafinancialconsultant" target="_blank">YouTube</a>
-      </div>
-      <p class="copy">© 2025 KARBA. All rights reserved.</p>
+<footer class="footer">
+  <div class="container foot-inner">
+    <div class="logo-foot">
+      <div class="brand-title">KARBA</div>
+      <div class="brand-sub">FINANCIAL CONSULTANT</div>
     </div>
-  </footer>
-
-  <!-- Scripts -->
-  <script src="config.js?v=2"></script>
-  <script src="script.js?v=2"></script>
+    <div class="socials">
+      <a href="https://www.linkedin.com/in/babatunde-bamigbetan-14a4b6142?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener">LinkedIn</a>
+      <a href="https://www.facebook.com/share/16LyzTFTEt/" target="_blank" rel="noopener">Facebook</a>
+      <a href="https://www.instagram.com/karba_f.c?igsh=cGxxaWhnMGJvZ3p1" target="_blank" rel="noopener">Instagram</a>
+      <a href="https://www.youtube.com/@KarbaFinancialConsultant" target="_blank" rel="noopener">YouTube</a>
+    </div>
+    <div class="copy">© 2025 KARBA. All rights reserved.</div>
+  </div>
+</footer>
 </body>
 </html>
