--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <section id="contact" class="contact">
   <div class="container">
     <h2>Book a Free Consultation</h2>
-    <form id="lead-form" class="lead-form" autocomplete="on">
+   <form id="lead-form" class="lead-form">
       <div class="two">
         <label>Full name<input name="fullName" required placeholder="Your full name"></label>
         <label>Email<input name="email" required type="email" placeholder="you@example.com"></label>
@@ -111,7 +111,6 @@
     </form>
   </div>
 </section>
-<form id="lead-form" class="lead-form"> … </form>
 
 <footer class="footer">
   <div class="container foot-inner">
@@ -128,3 +127,5 @@
     <div class="copy">© 2025 KARBA. All rights reserved.</div>
   </div>
 </footer>
+<script defer src="config.v2.js?v=20250912a"></script>
+<script defer src="script.js?v=20250912a"></script>
