--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <script defer src="config.v2.js?v=20250912a"></script>
 <script defer src="script.js?v=20250912a"></script>
 </head>
+<script defer src="config.v2.js?v=20250913a"></script>
+<script defer src="script.js?v=20250913a"></script>    
 <body>
 <header class="nav">
   <div class="container nav-inner">
