--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
     <script defer src="config.v2.js?v=20250912a"></script>
     <script defer src="script.js?v=20250912a"></script>
 
-
-<!-- load config FIRST, then app logic; add versions to bust cache -->
-<script defer src="config.v2.js?v=20250912a"></script>
-<script defer src="script.js?v=20250912a"></script>
 </head>
+<!-- Config + App (versioned to bust cache) -->
 <script defer src="config.v2.js?v=20250913a"></script>
 <script defer src="script.js?v=20250913a"></script>    
-<body>
+</body>
 <header class="nav">
   <div class="container nav-inner">
     <div class="brand">
