--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 </footer>
 
 <!-- CONFIG FIRST, THEN APP. Keep these names exactly. -->
-<script defer src="config.js?v=reset1"></script>
-<script defer src="script.js?v=reset1"></script>
+<script src="config.js?v=20250913a"></script>
+<script src="script.js?v=20250913a"></script>
+
 </body>
 </html>
