--- a/index.html
+++ b/index.html
@@ -3,123 +3,90 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KARBA Financial Consultant</title>
+  <title>KARBA — Financial Consultant</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+
+  <style>
+    :root { --bg:#0b1e36; --card:#0f2a4a; --text:#e7e5e4; --muted:#a3a3a3; --accent:#f5d76e; }
+    *{box-sizing:border-box} body{margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:linear-gradient(180deg,#071629,#0b1e36)}
+    .container{max-width:880px;margin:0 auto;padding:24px}
+    header{padding:20px 0;color:var(--text)}
+    h1,h2{color:var(--text);margin:0 0 12px}
+    p{color:var(--muted)}
+    .hero{padding:40px 0}
+    .btn{display:inline-block;padding:10px 16px;border-radius:10px;border:1px solid var(--accent);color:#1a1a1a;background:var(--accent);text-decoration:none;font-weight:600}
+    .card{background:rgba(255,255,255,0.04);border:1px solid rgba(255,255,255,0.1);border-radius:14px;padding:18px}
+    form{display:grid;gap:14px}
+    label{color:var(--text);font-size:14px}
+    input,select,textarea{width:100%;padding:12px 14px;border-radius:10px;border:1px solid rgba(255,255,255,0.2);background:rgba(0,0,0,0.25);color:var(--text);outline:none}
+    input::placeholder, textarea::placeholder{color:#8ea8c2}
+    button[type=submit]{padding:12px 16px;border:0;border-radius:10px;background:var(--accent);font-weight:700}
+    .status{min-height:20px;font-size:14px}
+    footer{color:var(--muted);padding:22px 0;text-align:center}
+  </style>
 </head>
 <body>
-<header class="nav">
-  <div class="container nav-inner">
-    <div class="brand">
-      <div class="shield">▲</div>
-      <div class="brand-text">
-        <div class="brand-title">KARBA</div>
-        <div class="brand-sub">FINANCIAL CONSULTANT</div>
-      </div>
+  <header>
+    <div class="container">
+      <h1>KARBA</h1>
+      <p>Independent advice focused on your goals.</p>
     </div>
-    <nav class="menu">
-      <a href="#services">Services</a>
-      <a href="#about">About</a>
-      <a href="#contact" class="btn btn-outline">Book Free Consultation</a>
-    </nav>
-  </div>
-</header>
+  </header>
 
-<section class="hero">
-  <div class="container hero-inner">
-    <div class="hero-copy">
-      <h1>Live Confidently. Invest Wisely. <span class="nowrap">Leave a Legacy.</span></h1>
-      <p>Tailored protection and investment solutions for families, professionals, and growing businesses.</p>
-      <div class="cta-row">
-        <a href="#contact" class="btn btn-primary">Get Covered Today</a>
-        <a class="btn btn-ghost" href="https://wa.me/2348123456789?text=Hello%20KARBA%2C%20I%27d%20like%20a%20free%20consultation.">Chat on WhatsApp</a>
-      </div>
-    </div>
-    <div class="hero-art" aria-hidden="true">
-      <div class="family-card">Black happy family — protected & thriving.</div>
-    </div>
-  </div>
-</section>
+  <main class="container">
+    <section class="hero card">
+      <h2>Book a Free Consultation</h2>
+      <p>Tell us a little about you. We’ll reach out shortly.</p>
 
-<section id="services" class="services">
-  <div class="container">
-    <h2>Our Services</h2>
-    <div class="grid">
-      <div class="card"><h3>Life Insurance Policies</h3><p>Affordable, flexible coverage designed to secure your loved ones and estate.</p></div>
-      <div class="card"><h3>Children Education Plans</h3><p>Plan ahead for tuition and long-term academic milestones.</p></div>
-      <div class="card"><h3>Family Protection Plans</h3><p>Comprehensive cover for income, health gaps, and emergencies.</p></div>
-      <div class="card"><h3>Retirement & Annuity</h3><p>Build stable retirement income streams and protect your future.</p></div>
-      <div class="card"><h3>Motor / Car Insurance</h3><p>Third-party and comprehensive cover with fast claims assistance.</p></div>
-      <div class="card"><h3>General Insurance</h3><p>Fire, burglary, travel and more — we’ll tailor cover to your needs.</p></div>
-      <div class="card"><h3>Real Estate Advisory (Future)</h3><p>Guidance on property acquisition and risk evaluation.</p></div>
-    </div>
-  </div>
-</section>
+      <form id="lead-form" class="card" novalidate>
+        <div>
+          <label for="name">Full name</label>
+          <input id="name" name="name" placeholder="Your full name" required />
+        </div>
 
-<section id="about" class="about">
-  <div class="container about-inner">
-    <div>
-      <h2>Why KARBA?</h2>
-      <ul class="ticks">
-        <li>Independent advice focused on your goals</li>
-        <li>Transparent, modern process & ongoing support</li>
-        <li>Solutions that scale as your family or business grows</li>
-      </ul>
-    </div>
-    <div class="stat-card">
-      <div class="stat"><span>10+</span> partner providers</div>
-      <div class="stat"><span>100%</span> tailored recommendations</div>
-    </div>
-  </div>
-</section>
+        <div>
+          <label for="email">Email</label>
+          <input id="email" name="email" type="email" placeholder="you@example.com" required />
+        </div>
 
-<section id="contact" class="contact">
-  <div class="container">
-    <h2>Book a Free Consultation</h2>
-    <form id="lead-form" class="lead-form" autocomplete="on">
-      <div class="two">
-        <label>Full name<input name="fullName" required placeholder="Your full name" /></label>
-        <label>Email<input name="email" required type="email" placeholder="you@example.com" /></label>
-      </div>
-      <label>Phone (optional)<input name="phone" placeholder="+234 ..." /></label>
-      <label>Service of interest
-        <select name="service">
-          <option>Life Insurance</option>
-          <option>Children Education Plan</option>
-          <option>Family Protection</option>
-          <option>Retirement & Annuity</option>
-          <option>Motor / Car Insurance</option>
-          <option>General Insurance</option>
-        </select>
-      </label>
-      <label>Message (optional)<textarea name="message" rows="4" placeholder="Tell us your goal..."></textarea></label>
-      <button class="btn btn-primary" type="submit">Submit</button>
-      <div id="form-status" aria-live="polite"></div>
-    </form>
-  </div>
-</section>
+        <div>
+          <label for="phone">Phone (optional)</label>
+          <input id="phone" name="phone" placeholder="+234…" />
+        </div>
 
-<footer class="footer">
-  <div class="container foot-inner">
-    <div class="logo-foot">
-      <div class="brand-title">KARBA</div>
-      <div class="brand-sub">FINANCIAL CONSULTANT</div>
-    </div>
-    <div class="socials">
-      <a href="https://www.linkedin.com/in/babatunde-bamigbetan-14a4b6142?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener">LinkedIn</a>
-      <a href="https://www.facebook.com/share/16LyzTFTEt/" target="_blank" rel="noopener">Facebook</a>
-      <a href="https://www.instagram.com/karba_f.c?igsh=cGxxaWhnMGJvZ3p1" target="_blank" rel="noopener">Instagram</a>
-      <a href="https://www.youtube.com/@KarbaFinancialConsultant" target="_blank" rel="noopener">YouTube</a>
-    </div>
-    <div class="copy">© 2025 KARBA. All rights reserved.</div>
-  </div>
-</footer>
+        <div>
+          <label for="service">Service of interest</label>
+          <select id="service" name="service">
+            <option value="Life Insurance">Life Insurance</option>
+            <option value="Family Protection Plan">Family Protection Plan</option>
+            <option value="Children Education Plan">Children Education Plan</option>
+            <option value="Retirement / Annuity">Retirement / Annuity</option>
+            <option value="General Insurance">General Insurance</option>
+            <option value="Real Estate Advisory">Real Estate Advisory</option>
+          </select>
+        </div>
 
-<!-- CONFIG FIRST, THEN APP. Keep these names exactly. -->
-<script src="config.js?v=20250913c"></script>
-<script src="script.js?v=20250913c"></script>
+        <div>
+          <label for="message">Message (optional)</label>
+          <textarea id="message" name="message" rows="3" placeholder="Tell us your goal…"></textarea>
+        </div>
 
+        <div class="status" id="form-status" aria-live="polite"></div>
+
+        <button type="submit" class="btn">Submit</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">© 2025 KARBA. All rights reserved.</div>
+  </footer>
+
+  <!-- IMPORTANT: config FIRST, then app code -->
+  <script src="config.js?v=2"></script>
+  <script src="script.js?v=2"></script>
 </body>
 </html>
