--- a/index.html
+++ b/index.html
@@ -1,44 +1,186 @@
-<section id="contact" class="contact">
-  <div class="container">
-    <h2>Book a Free Consultation</h2>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>KARBA — Financial Consultant</title>
+  <link rel="icon" href="assets/favicon.ico" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
 
-    <form id="lead-form" novalidate>
-      <div class="row">
-        <label for="name">Full name</label>
-        <input id="name" name="name" type="text" placeholder="Your full name" autocomplete="name" required />
+  <!-- Topnav -->
+  <header class="nav">
+    <div class="nav__inner container">
+      <div class="brand">
+        <img src="assets/logo.png" alt="KARBA logo" class="brand__logo" />
+        <div class="brand__text">
+          <strong>KARBA</strong>
+          <span>Financial Consultant</span>
+        </div>
       </div>
 
-      <div class="row">
-        <label for="email">Email</label>
-        <input id="email" name="email" type="email" placeholder="you@example.com" autocomplete="email" required />
+      <nav class="menu">
+        <a href="#services">Services</a>
+        <a href="#about">About</a>
+        <a href="#certs">Certificates</a>
+        <a href="#contact" class="btn btn--outline">Book Free Consultation</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <div class="hero__image">
+      <!-- we swap these src values in script.js for a soft slideshow -->
+      <img id="heroImg" src="assets/hero-1.jpg" alt="Happy Nigerian family" />
+    </div>
+    <div class="hero__overlay"></div>
+    <div class="hero__content container">
+      <h1 class="hero__title">Live Confidently. Invest Wisely. Leave a Legacy.</h1>
+      <p class="hero__sub">Tailored protection and investment solutions for families, professionals, and growing businesses.</p>
+      <div class="hero__cta">
+        <a href="#contact" class="btn btn--gold">Get Covered Today</a>
+        <a href="https://wa.me/2348090914569?text=Hello%20KARBA%2C%20I%27d%20like%20a%20free%20consultation" class="btn btn--outline">Chat on WhatsApp</a>
       </div>
+    </div>
+  </section>
 
-      <div class="row">
-        <label for="phone">Phone (optional)</label>
-        <input id="phone" name="phone" type="tel" placeholder="+234…" autocomplete="tel" />
+  <!-- Services (icon grid) -->
+  <section id="services" class="section">
+    <div class="container">
+      <h2 class="section__title">Our Services</h2>
+      <div class="grid services">
+        <div class="card">
+          <div class="ic"><span class="ic--shield"></span></div>
+          <h3>Life Insurance Policies</h3>
+          <p>Affordable, flexible coverage designed to secure your loved ones and estate.</p>
+        </div>
+        <div class="card">
+          <div class="ic"><span class="ic--gradcap"></span></div>
+          <h3>Children Education Plans</h3>
+          <p>Planned cover for tuition and long-term academic milestones.</p>
+        </div>
+        <div class="card">
+          <div class="ic"><span class="ic--family"></span></div>
+          <h3>Family Protection Plans</h3>
+          <p>Comprehensive cover for income, health gaps, and emergencies.</p>
+        </div>
+        <div class="card">
+          <div class="ic"><span class="ic--retire"></span></div>
+          <h3>Retirement &amp; Annuity</h3>
+          <p>Build stable retirement income streams and protect your future.</p>
+        </div>
+        <div class="card">
+          <div class="ic"><span class="ic--car"></span></div>
+          <h3>Motor / Car Insurance</h3>
+          <p>Third-party &amp; comprehensive cover with fast claims assistance.</p>
+        </div>
+        <div class="card">
+          <div class="ic"><span class="ic--home"></span></div>
+          <h3>Future Real Estate Consultancy</h3>
+          <p>Guidance on property acquisition and risk evaluation.</p>
+        </div>
       </div>
+    </div>
+  </section>
 
-      <div class="row">
-        <label for="service">Service of interest</label>
-        <select id="service" name="service" required>
-          <option value="" selected disabled>Select a service</option>
-          <option>Life Insurance</option>
-          <option>Family Protection Plans</option>
-          <option>Retirement Annuity</option>
-          <option>Children Education Plan</option>
-          <option>General Insurance</option>
-          <option>Car Insurance</option>
-        </select>
+  <!-- Why choose KARBA -->
+  <section id="about" class="section section--alt">
+    <div class="container">
+      <h2 class="section__title">Why Choose KARBA</h2>
+      <div class="grid why">
+        <div class="chip"><span class="ic--check"></span>Licensed Advisor</div>
+        <div class="chip"><span class="ic--check"></span>Expert Guidance</div>
+        <div class="chip"><span class="ic--check"></span>Custom-Tailored Solutions</div>
+        <div class="stats">
+          <div><strong>10+</strong><span>partner providers</span></div>
+          <div><strong>100%</strong><span>tailored recommendations</span></div>
+        </div>
       </div>
+    </div>
+  </section>
 
-      <div class="row">
-        <label for="message">Message (optional)</label>
-        <textarea id="message" name="message" rows="2" placeholder="Tell us your goal…"></textarea>
+  <!-- Certificates -->
+  <section id="certs" class="section">
+    <div class="container">
+      <h2 class="section__title">Corporate Certificates</h2>
+      <div class="certs">
+        <figure class="cert">
+          <img src="assets/cac-incorporation.jpg" alt="CAC Certificate of Incorporation" />
+          <figcaption>CAC — Certificate of Incorporation</figcaption>
+        </figure>
+        <figure class="cert">
+          <img src="assets/tin-certificate.jpg" alt="Taxpayer Identification Number Certificate" />
+          <figcaption>JTB / FIRS — TIN Certificate</figcaption>
+        </figure>
       </div>
+    </div>
+  </section>
 
-      <div id="form-status" aria-live="polite" style="min-height:24px;margin:8px 0;"></div>
+  <!-- Contact / Lead form -->
+  <section id="contact" class="section section--alt">
+    <div class="container">
+      <h2 class="section__title">Book a Free Consultation</h2>
+      <p class="section__sub">Please fill your name, email, and service of interest.</p>
 
-      <button class="btn btn-primary" type="submit">Submit</button>
-    </form>
-  </div>
-</section>
+      <form id="leadForm" class="form">
+        <div class="form__row">
+          <label>Full name<input name="name" type="text" placeholder="Your full name" required /></label>
+          <label>Email<input name="email" type="email" placeholder="you@example.com" required /></label>
+          <label>Phone (optional)<input name="phone" type="tel" placeholder="+234..." /></label>
+        </div>
+
+        <div class="form__row">
+          <label>Service of interest
+            <select name="service" required>
+              <option value="">Select a service…</option>
+              <option>Life Insurance</option>
+              <option>Children Education Plans</option>
+              <option>Family Protection Plans</option>
+              <option>Retirement &amp; Annuity</option>
+              <option>Motor / Car Insurance</option>
+              <option>Real Estate (Future)</option>
+            </select>
+          </label>
+          <label>Message (optional)
+            <textarea name="message" rows="3" placeholder="Tell us your goal…"></textarea>
+          </label>
+        </div>
+
+        <div class="form__actions">
+          <button id="submitBtn" class="btn btn--gold" type="submit">Submit</button>
+          <span id="formStatus" role="status" aria-live="polite"></span>
+        </div>
+      </form>
+
+      <div class="health" id="health"></div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container foot">
+      <div class="foot__brand">
+        <img src="assets/logo.png" alt="KARBA logo small" />
+        <div>KARBA Financial Consultant</div>
+      </div>
+      <div class="foot__links">
+        <a href="https://www.linkedin.com/in/babatunde-bamigbetan-148db6122/" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://www.facebook.com/share/p/14G1V2JTFH/" target="_blank" rel="noopener">Facebook</a>
+        <a href="https://www.instagram.com/you" target="_blank" rel="noopener">Instagram</a>
+        <a href="https://www.youtube.com/@karbafinancialconsultant" target="_blank" rel="noopener">YouTube</a>
+      </div>
+      <div class="foot__copy">© 2025 KARBA. All rights reserved.</div>
+    </div>
+  </footer>
+
+  <!-- CONFIG FIRST -->
+  <script src="config.js"></script>
+  <!-- reCAPTCHA v3 -->
+  <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+  <!-- APP -->
+  <script src="script.js"></script>
+</body>
+</html>
