--- a/index.html
+++ b/index.html
@@ -104,19 +104,15 @@
   </section>
 
   <!-- Certificates -->
-  <section id="certs" class="section">
-    <div class="container">
-      <h2 class="section__title">Corporate Certificates</h2>
-      <div class="certs">
-        <figure class="cert">
-          <img src="assets/cac-incorporation.jpg" alt="CAC Certificate of Incorporation" />
-          <figcaption>CAC — Certificate of Incorporation</figcaption>
-        </figure>
-        <figure class="cert">
-          <img src="assets/tin-certificate.jpg" alt="Taxpayer Identification Number Certificate" />
-          <figcaption>JTB / FIRS — TIN Certificate</figcaption>
-        </figure>
-      </div>
+  <div class="card">
+    <div class="card-title">CIIN / NAICOM — Professional & Regulatory</div>
+    <div class="logos">
+      <img src="assets/ciin-logo.png" alt="CIIN" />
+      <img src="assets/naicom-logo.png" alt="NAICOM" />
+    </div>
+    <p class="muted">Formal documents available on request.</p>
+  </div>
+</div>
     </div>
   </section>
 
