--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@
 
   <!-- Certificates -->
   <div class="card">
-    <div class="card-title">CIIN / NAICOM — Professional & Regulatory</div>
+    <div class="card-title">CIIN / NAICOM / CAC / TIN — Professional & Regulatory</div>
     <div class="logos">
       <img src="assets/ciin-logo.png" alt="CIIN" />
       <img src="assets/naicom-logo.png" alt="NAICOM" />
+       <img src="assets/cac-logo.png" alt="CAC" />
+       <img src="assets/tin-logo.png" alt="TIN" />
     </div>
     <p class="muted">Formal documents available on request.</p>
   </div>
