--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="card">
           <div class="ic"><span class="ic--home"></span></div>
-          <h3>Future Real Estate Consultancy</h3>
+          <h3>Real Estate Consultancy</h3>
           <p>Guidance on property acquisition and risk evaluation.</p>
         </div>
       </div>
