--- a/index.html
+++ b/index.html
@@ -186,7 +186,9 @@
   <!-- CONFIG FIRST -->
   <script src="config.js"></script>
   <!-- reCAPTCHA v3 loader (before script.js) -->
+  <script src="config.js?v=1"></script>
 <script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAE6o5J3whH9YbIDPQfLWkXKN4dqc"></script>
+<script src="script.js?v=1" defer></script>
 <!-- your app code -->
 <script src="config.js?v=1"></script>
 <script src="script.js?v=<?=Date.now()?>"></script>
