--- a/index.html
+++ b/index.html
@@ -124,8 +124,13 @@
     <p class="muted">Formal documents available on request.</p>
   </div>
 </div>
-    </div>
-  </section>
+  <section id="certificates" class="cert-section">
+  <h2>Our Certificates</h2>
+  <div class="cert-gallery">
+    <img src="/assets/hero-3.jpg" alt="CAC Incorporation Certificate">
+    <img src="/assets/hero-4.jpg" alt="Additional Certificate">
+  </div>
+</section>
 
   <!-- Contact / Lead form -->
   <section id="contact" class="section section--alt">
