--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   <!-- CONFIG FIRST -->
   <script src="config.js"></script>
   <!-- SCRIPTS (order matters: reCAPTCHA → config → app script) -->
-<script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAEdGo5J3whH9YbIDPQfLWKXN4dqc"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAEdGo5J3whH9YbIDPQfLWKXN4dqc" async defer></script>
 <script src="config.js"></script>
 <script src="script.js"></script>
 <!-- your app code -->
