--- a/index.html
+++ b/index.html
@@ -181,5 +181,8 @@
 <!-- your app code -->
 <script src="config.js?v=1"></script>
 <script src="script.js?v=<?=Date.now()?>"></script>
+   <script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAEdGo5J3whH9YbIDPQfLWKXN4dqc" async defer></script>
+<script src="config.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
