--- a/index.html
+++ b/index.html
@@ -180,14 +180,12 @@
   <!-- CONFIG FIRST -->
   <script src="config.js"></script>
   <!-- SCRIPTS (order matters: reCAPTCHA → config → app script) -->
-  <script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAEdGo5J3whH9YbIDPQfLWKXN4dqc" async defer></script>
 <script src="config.js"></script>
-<script src="script.js"></script>
+<script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAEdGo5J3whH9YbIDPQfLWKXN4dqc" async defer></script>
+<script src="config.js"></script>
 <!-- your app code -->
-<script src="config.js?v=1"></script>
 <script src="script.js?v=<?=Date.now()?>"></script>
    <script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAEdGo5J3whH9YbIDPQfLWKXN4dqc" async defer></script>
 <script src="config.js"></script>
-<script src="script.js"></script>
 </body>
 </html>
