--- a/index.html
+++ b/index.html
@@ -113,5 +113,9 @@
 
   <!-- 3) App script LAST (uses grecaptcha when ready) -->
   <script src="script.js" defer></script>
+<script src="config.js"></script>
+<script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAEdGo5j3wHH9YbIPQFlWKXkN4dqc"></script>
+<script src="script.js" defer></script>
+
 </body>
 </html>
