--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
 <script src="config.js"></script>
 <script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAEdGo5j3wHH9YbIPQFlWKXkN4dqc"></script>
 <script src="script.js" defer></script>
-
+  
+<script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAEdGo5j3wHH9YbIPQFlWKXkN4dqc"></script>
+<script src="config.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
