--- a/index.html
+++ b/index.html
@@ -1,122 +1,56 @@
-<!doctype html>
-<html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KARBA Financial Consultant</title>
 
-  <link rel="icon" href="assets/favicon.ico" sizes="any">
-  <link rel="preconnect" href="https://www.google.com" crossorigin>
-  <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="assets/favicon.ico" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="styles.css" />
 
   <!-- 1) Config FIRST -->
   <script src="config.js"></script>
 
-  <!-- 2) reCAPTCHA v3 loader (keeps page fast) -->
+  <!-- 2) reCAPTCHA v3 (render with your SITE key from config.js) -->
   <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+
+  <!-- 3) App script (only once; no cache-busting duplicates) -->
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- ======= NAV ======= -->
-  <header class="nav">
-    <div class="container nav__inner">
-      <img src="assets/logo.png" alt="KARBA" class="brand__logo">
-      <nav class="menu">
-        <a href="#services">Services</a>
-        <a href="#about">About</a>
-        <a href="#contact">Book Free Consultation</a>
-      </nav>
-    </div>
-  </header>
+  <!-- … your page … -->
 
-  <!-- ======= HERO (auto slider) ======= -->
-  <section class="hero" id="home">
-    <img class="hero__img is-active" src="assets/hero-1.jpg" alt="">
-    <img class="hero__img" src="assets/hero-2.jpg" alt="">
-    <div class="hero__overlay">
-      <h1>Live Confidently. Invest Wisely. Leave a Legacy.</h1>
-      <div class="hero__cta">
-        <a class="btn btn--gold" href="#contact">Get Covered Today</a>
-        <a class="btn btn--outline" href="https://wa.me/2348090914569" target="_blank" rel="noopener">Chat on WhatsApp</a>
-      </div>
-    </div>
+  <!-- Contact/lead form — keep these exact ids/names -->
+  <section class="section">
+    <h2>Book a Free Consultation</h2>
+    <p id="form-status" class="status">Checking API…</p>
+
+    <form id="lead-form" novalidate>
+      <label>Full name
+        <input id="name" name="name" type="text" autocomplete="name" required />
+      </label>
+
+      <label>Email
+        <input id="email" name="email" type="email" autocomplete="email" required />
+      </label>
+
+      <label>Phone (optional)
+        <input id="phone" name="phone" type="tel" autocomplete="tel" />
+      </label>
+
+      <label>Service of interest
+        <select id="service" name="service" required>
+          <option value="Life Insurance">Life Insurance</option>
+          <option value="Family Protection Plans">Family Protection Plans</option>
+          <option value="Children Education Plans">Children Education Plans</option>
+          <option value="Retirement & Annuity">Retirement &amp; Annuity</option>
+        </select>
+      </label>
+
+      <label>Message (optional)
+        <textarea id="message" name="message" rows="4"></textarea>
+      </label>
+
+      <button id="submitBtn" type="submit">Submit</button>
+    </form>
   </section>
-
-  <!-- ======= SERVICES (quick) ======= -->
-  <section id="services" class="section">
-    <div class="container">
-      <h2>Our Services</h2>
-      <div class="cards">
-        <div class="card">Life Insurance Policies</div>
-        <div class="card">Family Protection Plans</div>
-        <div class="card">Children Education Plans</div>
-        <div class="card">Motor / Car Insurance</div>
-        <div class="card">General Insurance</div>
-        <div class="card">Retirement & Annuity</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- ======= CONTACT / LEAD FORM ======= -->
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>Book a Free Consultation</h2>
-      <p>Please fill your name, email, and service of interest.</p>
-
-      <div id="status" class="status">Checking API…</div>
-
-      <form id="lead-form" class="form">
-        <label>Full name
-          <input name="name" type="text" autocomplete="name" required>
-        </label>
-
-        <label>Email
-          <input name="email" type="email" autocomplete="email" required>
-        </label>
-
-        <label>Phone (optional)
-          <input name="phone" type="tel" inputmode="tel" autocomplete="tel">
-        </label>
-
-        <label>Service of interest
-          <select name="service" required>
-            <option value="">Select…</option>
-            <option>Life Insurance</option>
-            <option>Family Protection Plans</option>
-            <option>Children Education Plans</option>
-            <option>Motor / Car Insurance</option>
-            <option>General Insurance</option>
-            <option>Retirement & Annuity</option>
-          </select>
-        </label>
-
-        <label>Message (optional)
-          <textarea name="message" rows="4" placeholder="Your note…"></textarea>
-        </label>
-
-        <!-- reCAPTCHA v3 “badge” host -->
-        <div id="recaptcha-badge-host" aria-hidden="true"></div>
-
-        <button id="submitBtn" class="btn btn--gold" type="submit">Submit</button>
-      </form>
-    </div>
-  </section>
-
-  <footer class="footer">
-    <div class="container footer__inner">
-      <img src="assets/logo.png" alt="" class="footer__mini">
-      <span>© 2025 KARBA. All rights reserved.</span>
-    </div>
-  </footer>
-
-  <!-- 3) App script LAST (uses grecaptcha when ready) -->
-  <script src="script.js" defer></script>
-<script src="config.js"></script>
-<script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAEdGo5j3wHH9YbIPQFlWKXkN4dqc"></script>
-<script src="script.js" defer></script>
-  
-<script src="https://www.google.com/recaptcha/api.js?render=6Ld66MYrAAAAAEdGo5j3wHH9YbIPQFlWKXkN4dqc"></script>
-<script src="config.js"></script>
-<script src="script.js"></script>
 </body>
-</html>
