--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KARBA Financial Consultant</title>
 
-  <link rel="icon" href="assets/favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- Public config FIRST -->
+  <!-- Load config first -->
   <script src="config.js"></script>
 
-  <!-- Google reCAPTCHA v3 (loads grecaptcha on window) -->
+  <!-- Load reCAPTCHA -->
   <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+
+  <!-- Your app script -->
+  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Topbar -->
