--- a/index.html
+++ b/index.html
@@ -68,13 +68,12 @@
     <small>© <span id="year"></span> KARBA. All rights reserved.</small>
   </footer>
 
-  <!-- 1) Your config FIRST (no script tags inside the file) -->
+  <!-- 1) Config FIRST -->
   <script src="config.js"></script>
 
-  <!-- 2) reCAPTCHA v3 loader (no key here; we’ll pass it in script.js) -->
-  <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+  <!-- 2) DO NOT add reCAPTCHA tag here. We inject it from script.js with your SITE KEY. -->
 
-  <!-- 3) App logic -->
+  <!-- 3) App -->
   <script src="script.js"></script>
 </body>
 </html>
